--- a/index.css
+++ b/index.css
@@ -317,7 +317,7 @@ input[type="text"]:focus{
 .btn{
     /* border:2px solid; */
     display: inline-block;
-    margin: 2rem;
+    margin: 2rem 1rem;
 
     padding: 1rem 2.5rem;
     background-color:rgb(89, 4, 4);
